--- a/config/database.yml
+++ b/config/database.yml
@@ -16,12 +16,16 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
+test:
+  <<: *default
+  database: db/test.sqlite3
+
 production:
   adapter: mysql2
   database: <%= ENV['DB_DATABASE'] %>
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
+  password: "<%= ENV['DB_PASSWORD'] %>"
   encoding: utf8mb4
   collation: utf8mb4_general_ci
   pool: 5
