--- a/config/database.yml
+++ b/config/database.yml
@@ -21,12 +21,12 @@ test:
   database: db/test.sqlite3
 
 production:
-  adapter: mysql2
+  <<: *default
   database: <%= ENV['DB_DATABASE'] %>
+  adapter: mysql2
+  encoding: utf8mb4
+  charset: utf8mb4
+  collation: utf8mb4_general_ci
   host: <%= ENV['DB_HOST'] %>
   username: <%= ENV['DB_USERNAME'] %>
   password: "<%= ENV['DB_PASSWORD'] %>"
-  encoding: utf8mb4
-  collation: utf8mb4_general_ci
-  pool: 5
-  timeout: 5000
