--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -83,7 +83,7 @@ production:
   <<: *default
 
   # Production depends on precompilation of packs prior to booting for performance.
-  compile: true
+  compile: fa
 
   # Extract and emit a css file
   extract_css: true
